Rensade bort onödig kod i build.gradle