@@ -23,33 +23,6 @@ fitnesse {
     extraProperties = [baseUrl: baseUrl] 
 }
 
-if (project.hasProperty('runFitnesse')) {
-    apply plugin: 'org.akhikhl.gretty'
-    gretty {
-        contextPath = '/'
-        logbackConfigFile = "${projectDir}/src/main/resources/logback-test.xml"
-
-        jvmArgs = [
-            '-Dspring.profiles.active=local',
-            '-Dprivatlakarportal.baseUrl=http://localhost:8090/',
-            '-XX:MaxPermSize=256M',
-        ]
-    }
-
-    farm {
-        webapp ":privatlakarportal-web"
-        webapp project
-        integrationTestTask = 'fitnesseTest'
-    }
-
-    dependencies {
-        gretty "com.h2database:h2:1.3.171"
-        gretty "mysql:mysql-connector-java:5.1.29"
-        gretty "org.apache.activemq:activemq-broker:5.8.0"
-        gretty "org.apache.tomcat:tomcat-catalina:7.0.20"
-    }
-}
-
 dependencies {
     compile project(":privatlakarportal-web")
 
